Rewrote the cat location daemon to C

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,16 @@ if(NOT PCRE2_INCLUDE_DIR OR NOT PCRE2_LIBRARY)
   message(FATAL_ERROR "PCRE2 (8-bit) not found - please install libpcre2-8 development files")
 endif()
 
+find_package(LibXml2 REQUIRED)
+
 add_executable(tcpproxy
   tcpproxy.c
   observer.c
   tracker_parser.c
+)
+
+add_executable(cat_location_daemon
+  cat_location_daemon.c
 )
 
 add_executable(tracker_parser_daemon
@@ -34,19 +40,22 @@ add_executable(tracker_parser_daemon
 target_compile_definitions(tcpproxy PRIVATE PRODUCT="tcpproxy" VERSION="1.0")
 
 target_include_directories(tcpproxy PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${RABBITMQ_INCLUDE_DIR})
+target_include_directories(cat_location_daemon PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${RABBITMQ_INCLUDE_DIR} ${LIBXML2_INCLUDE_DIRS})
 target_include_directories(tracker_parser_daemon PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${RABBITMQ_INCLUDE_DIR} ${PCRE2_INCLUDE_DIR})
 
 target_link_libraries(tcpproxy PRIVATE ${RABBITMQ_LIBRARY})
+target_link_libraries(cat_location_daemon PRIVATE ${RABBITMQ_LIBRARY} ${LIBXML2_LIBRARIES})
 target_link_libraries(tracker_parser_daemon PRIVATE ${RABBITMQ_LIBRARY} ${PCRE2_LIBRARY})
 
 if(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
   target_compile_options(tcpproxy PRIVATE -Wall)
+  target_compile_options(cat_location_daemon PRIVATE -Wall)
   target_compile_options(tracker_parser_daemon PRIVATE -Wall)
 endif()
 
 install(TARGETS tcpproxy RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR})
+install(TARGETS cat_location_daemon RUNTIME DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/tcpproxy)
 install(TARGETS tracker_parser_daemon RUNTIME DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/tcpproxy)
-install(PROGRAMS scripts/cat_location_daemon.py DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/tcpproxy)
 install(FILES scripts/__init__.py DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/tcpproxy)
 install(FILES tcpproxy.1 DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
 install(FILES Locations.kml DESTINATION ${CMAKE_INSTALL_SYSCONFDIR} RENAME Locations.kml.sample)
@@ -58,15 +67,16 @@ if(Python3_Interpreter_FOUND)
   add_custom_target(proxy-tests
     COMMAND ${CMAKE_COMMAND} -E env TCPPROXY_BIN=$<TARGET_FILE:tcpproxy>
             ${Python3_EXECUTABLE} ${PROJECT_SOURCE_DIR}/tests/run_proxy_tests.py
-    DEPENDS tcpproxy tracker_parser_daemon
+    DEPENDS tcpproxy tracker_parser_daemon cat_location_daemon
     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
     COMMENT "Running proxy end-to-end tests"
   )
   add_custom_target(amqp-integration
     COMMAND ${CMAKE_COMMAND} -E env TCPPROXY_BIN=$<TARGET_FILE:tcpproxy>
             TCPPROXY_TRACKER_PARSER=$<TARGET_FILE:tracker_parser_daemon>
+            TCPPROXY_CAT_LOCATION=$<TARGET_FILE:cat_location_daemon>
             ${Python3_EXECUTABLE} ${PROJECT_SOURCE_DIR}/tests/run_amqp_integration.py
-    DEPENDS tcpproxy tracker_parser_daemon
+    DEPENDS tcpproxy tracker_parser_daemon cat_location_daemon
     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
     COMMENT "Running AMQP integration test (requires podman)"
   )
