Unified rabbit listener/publisher code and simplified tests

--- a/cat_location_daemon.service
+++ b/cat_location_daemon.service
@@ -7,9 +7,9 @@ Wants=network-online.target
 Type=simple
 ExecStart=/usr/local/libexec/tcpproxy/cat_location_daemon \
   --input-uri=amqp://guest:guest@127.0.0.1:5672/%2F \
-  --input-queue=tracker.events.service \
-  --input-exchange=tcpproxy.events \
-  --input-routing-key=tracker.raw \
+  --input-queue=cat.location.source \
+  --input-exchange=tracker.events.parsed \
+  --input-routing-key=tracker.parsed \
   --output-uri=amqp://guest:guest@127.0.0.1:5672/%2F \
   --output-exchange=cat.location \
   --output-routing-key=cat.position \
