--- a/configs/cat_location_daemon.conf
+++ b/configs/cat_location_daemon.conf
@@ -1,12 +1,12 @@
 # Sample configuration for cat_location_daemon.
 
-# AMQP URI to consume tracker events from.
+# AMQP URI to consume parsed tracker events from.
 input-uri=amqp://guest:guest@127.0.0.1:5672/%2F
 
-# Queue/exchange settings for the input stream.
-input-queue=tracker.events.cli
-input-exchange=tcpproxy.events
-input-routing-key=tracker.raw
+# Queue/exchange settings for the input stream (output of tracker_parser_daemon).
+input-queue=cat.location.source
+input-exchange=tracker.events.parsed
+input-routing-key=tracker.parsed
 
 # Where to publish location updates.
 output-uri=amqp://guest:guest@127.0.0.1:5672/%2F
